# budget-app

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  budget-app.db  go.mod  go.sum  pyproject.toml
app/assets/: styles.css
app/cmd/server/: main.go
backend/: pyproject.toml
backend-python/src/: main.py  routes.py
backend/src/: budgets.py  categories.py  data_ingest.py  routes.py  tables.py  transactions.py  utils.py
backend/src/data/: test_data.csv
cmd/server/: db.go  main.go  repository.go  repository_test.go  schema.sql  test_db.db
cmd/server/handlers/: transaction_handler.go
cmd/server/models/: models.go
cmd/ui/: main.go
data/: schema.sql  test_transactions.csv
frontend/: .env
frontend-react/src/: App.tsx
frontend/src/components/: DropDownMenu.tsx  TransactionsPage.tsx
go-backend/: budget-app.db  go.mod
go-backend/src/: main.go
internal/data_access/: data_access.go  data_access_test.go  db.go  utils_test.go
internal/handlers/: balance_handler.go  budget_handler.go  chase_handler.go  transaction_handler.go
internal/logic/: logic.go  logic_test.go
internal/model/: types.go
internal/server/: logic.go  logic_test.go  repository.go  repository_mock.go  repository_test.go  server.go  types.go  utils.go  utils_test.go
internal/utils/: utils.go
mocks/: data_access.go  logic.go
old.backend/src/: transactions.py
old.backend/src/autocat/: data_ingest.py
old/old.frontend/: package.json
src/backend/: app.py  data_ingest.py  tables.py  transactions.py  utils.py
src/frontend/: package-lock.json  package.json
templates/: index.html
(+10 files in other folders)
